<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Elasticfusion</string>
    <string name="action_settings">Settings</string>
    <string name="main_page_string">main_page_string</string>
	<string name="default_string">Sdefrfeveee</string>
	<string name="first_person">First</string>
    <string name="third_person">Third</string>
    <string name="top_down">Top</string>
    <string name="average_depth">"Average depth (m): "</string>
    <string name="point_count">"Point count: "</string>

</resources>
